apps/linkwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app: linkwarden
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "linkwarden/linkwarden requires root"
    ignore-check.kube-linter.io/no-read-only-root-fs: "linkwarden/linkwarden requires writable filesystem"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000

      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.16.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "768Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            seccompProfile:
              type: "RuntimeDefault"

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: linkwarden-data
              mountPath: /data/data
              subPath: data
      volumes:
        - name: linkwarden-data
          persistentVolumeClaim:
            claimName: linkwarden-pvc
