apps/linkwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  selector:
    app: linkwarden
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
spec:
  selector:
    app: linkwarden-postgres
  ports:
    - port: 5432
      targetPort: 5432
